tests/fixtures/invalid/pow_int_list_set.py
# Cannot call pow() with Int, List[int], Set[int]
x = pow(1, [1, 2, 3], {1, 2, 3})
